5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1793_3140.log
== SUBMITION (2019-05-30 18:59:00) 
-- CODE:
n = array(eval(input(" digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- EXECUTION TIME:
0.151494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3140/main.py", line 1, in <module>
    n = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:01) 
-- CODE:
n = array(eval(input(" digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:59:51) 
-- CODE:
n = arange(N,dtype = float)
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- EXECUTION TIME:
0.192266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3140/main.py", line 1, in <module>
    n = arange(N,dtype = float)
NameError: name 'arange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:59:52) 
-- CODE:
n = arange(N,dtype = float)
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = arange(N,dtype = float)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:01:10) 
-- CODE:
n = arange(N, dtype = float)
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- EXECUTION TIME:
0.176175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/3140/main.py", line 1, in <module>
    n = arange(N, dtype = float)
NameError: name 'arange' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:01:11) 
-- CODE:
n = arange(N, dtype = float)
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = arange(N, dtype = float)
NameError: name 'arange' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:16) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- EXECUTION TIME:
0.354285
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
6.86
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
4.62
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
3.1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:16) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**1/5
	i = i +1
M = ((p1)/size(n))**1/5
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:02:56) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(1/5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:56) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(1/5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- EXECUTION TIME:
0.463707
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
9.47
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
7.67
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
digite :6.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:02:59) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(1/5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- EXECUTION TIME:
0.496034
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
9.47
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
7.67
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
6.14
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:03:02) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(1/5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:09:36) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(5)
	i = i +1
M = ((p1)/size(n))**(5)
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:09:36) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(5)
	i = i +1
M = ((p1)/size(n))**(5)
print(round(p1,2))
-- EXECUTION TIME:
0.351207
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
4937.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:10:44) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:46) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- EXECUTION TIME:
0.361151
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
57516.99
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:49) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- EXECUTION TIME:
0.44318
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
4937.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:10:49) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(p1,2))
-- EXECUTION TIME:
0.922674
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
57516.99
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
19649.83
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
4937.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:13:02) 
-- CODE:
from numpy import *
n = array(eval(input("digite :")))
i=0
p1 = 0 
while(i<size(n)):
	p1 = p1 + (n[i])**(5)
	i = i +1
M = ((p1)/size(n))**(1/5)
print(round(M,2))
-- EXECUTION TIME:
0.404713
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
6.07
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
5.05
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
3.97
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
